@@ -4,6 +4,11 @@
 
 - v1.0.10944                                -
 ---------------------------------------------
+- 2021-07-22                                -
+---------------------------------------------
+.: WSM: Task - Notify user when add as contributor (WSM-420)
+
+---------------------------------------------
 - 2021-07-21                                -
 ---------------------------------------------
 .: WSM: Task - Able to edit message (WSM-410)
